Update 'k8o0q40s6-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:639a93b5ac443a2185fa054cddc1494b08179bb9@sha256:3f4291149425d9ba55c359491fe5af87be10e30bcdf499e8ed36a899e57f963d

--- a/components/k8o0q40s6-python/overlays/development/deployment-patch.yaml
+++ b/components/k8o0q40s6-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: k8o0q40s6-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:639a93b5ac443a2185fa054cddc1494b08179bb9@sha256:3f4291149425d9ba55c359491fe5af87be10e30bcdf499e8ed36a899e57f963d
+          name: container-image
